--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&family=Ubuntu:wght@400;500;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
 
@@ -19,8 +19,11 @@
 
     <title>Mayan Bet</title>
   </head>
-  <body class="wheel-stage-1">
-    <div class="app">{{> app-navbar }} {{> main-content}}</div>
-    {{> app-modal }} {{> app-sidebar }}
+  <body>
+    <div class="app">
+      <div class="app__card">
+        <div class="app__content">{{> sign-up-form }}</div>
+      </div>
+    </div>
   </body>
 </html>
