--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
     <div class="app">
       <div class="app__card">
-        <div class="app__content">{{> sign-up-form }}</div>
+        <div class="app__content js-sign-up-wrapper"></div>
       </div>
     </div>
   </body>
