--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       <div class="app__card">
         <div class="app__content js-sign-up-wrapper"></div>
       </div>
+      <div class="app_download-btn">Download</div>
     </div>
   </body>
 </html>
